Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -69,7 +69,7 @@
     }
    ],
    "source": [
-    "data = pd.read_\n",
+    "data = pd.read_csv('weight-he')\n",
     "male_df =  None\n",
     "female_df =  None\n",
     "\n",
