Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -50,26 +50,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Male Height mean: 69.02634590621737\n",
-      "Male Height sd: 2.8633622286606517\n",
-      "Male Weight mean: 187.0206206581929\n",
-      "Male Weight sd: 19.781154516763813\n",
-      "Female Height mean: 63.708773603424916\n",
-      "Female Height sd: 2.696284015765056\n",
-      "Female Weight mean: 135.8600930074687\n",
-      "Female Weight sd: 19.022467805319007\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data = pd.read_csv('weight-he')\n",
+    "data = pd.read_csv('weight-height.csv')\n",
     "male_df =  None\n",
     "female_df =  None\n",
     "\n",
