--- a/index.ipynb
+++ b/index.ipynb
@@ -55,7 +55,7 @@
    "outputs": [],
    "source": [
     "data = pd.read_csv('weight-height.csv')\n",
-    "male_df =  data.loc[data['Gender']==]\n",
+    "male_df =  data.loc[data['Gender']=='Male']\n",
     "female_df =  None\n",
     "\n",
     "# Male Height mean: 69.02634590621737\n",
