Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -50,13 +50,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "data = pd.read_csv('weight-height.csv')\n",
     "male_df =  data.loc[data['Gender']=='Male']\n",
-    "female_df =  None\n",
+    "female_df =  data.loc[data['Gender']=='Female']\n",
     "\n",
     "# Male Height mean: 69.02634590621737\n",
     "# Male Height sd: 2.8633622286606517\n",
