Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -58,6 +58,8 @@
     "male_df =  data.loc[data['Gender']=='Male']\n",
     "female_df =  data.loc[data['Gender']=='Female']\n",
     "\n",
+    "male\n",
+    "\n",
     "# Male Height mean: 69.02634590621737\n",
     "# Male Height sd: 2.8633622286606517\n",
     "# Male Weight mean: 187.0206206581929\n",
