Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -50,15 +50,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Height     69.026346\n",
+       "Weight    187.020621\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data = pd.read_csv('weight-height.csv')\n",
     "male_df =  data.loc[data['Gender']=='Male']\n",
     "female_df =  data.loc[data['Gender']=='Female']\n",
     "\n",
-    "male\n",
+    "male_df.mean()\n",
     "\n",
     "# Male Height mean: 69.02634590621737\n",
     "# Male Height sd: 2.8633622286606517\n",
