--- a/index.ipynb
+++ b/index.ipynb
@@ -50,18 +50,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Height     69.026346\n",
-       "Weight    187.020621\n",
+       "Height     63.708774\n",
+       "Weight    135.860093\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +72,7 @@
     "female_df =  data.loc[data['Gender']=='Female']\n",
     "\n",
     "male_df.mean()\n",
-    "\n",
+    "female_df.mean()\n",
     "\n",
     "# Male Height mean: 69.02634590621737\n",
     "# Male Height sd: 2.8633622286606517\n",
