Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -71,8 +71,8 @@
     "male_df =  data.loc[data['Gender']=='Male']\n",
     "female_df =  data.loc[data['Gender']=='Female']\n",
     "\n",
-    "male_df.mean()\n",
-    "female_df.mean()\n",
+    "print(male_df.mean())\n",
+    "female_df.mean())\n",
     "\n",
     "# Male Height mean: 69.02634590621737\n",
     "# Male Height sd: 2.8633622286606517\n",
