--- a/index.ipynb
+++ b/index.ipynb
@@ -113,7 +113,7 @@
    "source": [
     "# Your code here\n",
     "binsize=10\n",
-    "male_df['Height'].plot.hist()"
+    "male_df['Height'].plot.hist(bins=binsize, den)"
    ]
   },
   {
