Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -113,7 +113,7 @@
    "source": [
     "# Your code here\n",
     "binsize=10\n",
-    "male_df['Height'].plot.hist(bins=binsize, density=True, alpha=0.7)"
+    "male_df['Height'].plot.hist(bins=binsize, density=True, alpha=0.7, label='Make')"
    ]
   },
   {
