--- a/index.ipynb
+++ b/index.ipynb
@@ -114,7 +114,7 @@
     "# Your code here\n",
     "binsize=10\n",
     "male_df['Height'].plot.hist(bins=binsize, density=True, alpha=0.7, label='Male Height')\n",
-    "female_df['Height']"
+    "female_df['Height']plot.hist(bins=binsize, density=True, alpha=0.7, label='le Height')"
    ]
   },
   {
