Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -160,7 +160,7 @@
    ],
    "source": [
     "def density(x):\n",
-    "    n, bins = np.histogram\n",
+    "    n, bins = np.histogram(x, 10, )\n",
     "\n",
     "\n",
     "# Generate test data and test the function - uncomment to run the test\n",
