--- a/index.ipynb
+++ b/index.ipynb
@@ -161,7 +161,7 @@
    "source": [
     "def density(x):\n",
     "    n, bins = np.histogram(x, 10, density=1)\n",
-    "    pdfx = np.\n",
+    "    pdfx = np.zeros(n.s)\n",
     "\n",
     "# Generate test data and test the function - uncomment to run the test\n",
     "# np.random.seed(5)\n",
