--- a/index.ipynb
+++ b/index.ipynb
@@ -153,7 +153,7 @@
     "    pdfx = np.zeros(n.size)\n",
     "    pdfy = np.zeros(n.size)\n",
     "    \n",
-    "    \n",
+    "    for k in range \n",
     "\n",
     "# Generate test data and test the function - uncomment to run the test\n",
     "# np.random.seed(5)\n",
