--- a/index.ipynb
+++ b/index.ipynb
@@ -154,7 +154,7 @@
     "    pdfy = np.zeros(n.size)\n",
     "    \n",
     "    for k in range(n.size):\n",
-    "        pdfx[k]\n",
+    "        pdfx[k] = 0.5*(bins)\n",
     "\n",
     "# Generate test data and test the function - uncomment to run the test\n",
     "# np.random.seed(5)\n",
