Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -155,6 +155,7 @@
     "    \n",
     "    for k in range(n.size):\n",
     "        pdfx[k] = 0.5*(bins[k]+bins[k+1])\n",
+    "        pdfy[k]\n",
     "\n",
     "# Generate test data and test the function - uncomment to run the test\n",
     "# np.random.seed(5)\n",
