--- a/index.ipynb
+++ b/index.ipynb
@@ -156,7 +156,7 @@
     "    for k in range(n.size):\n",
     "        pdfx[k] = 0.5*(bins[k]+bins[k+1])\n",
     "        pdfy[k] = n[k]\n",
-    "    return\n",
+    "    return pdfx, pdfy\n",
     "\n",
     "# Generate test data and test the function - uncomment to run the test\n",
     "# np.random.seed(5)\n",
