Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -158,7 +158,8 @@
     "        pdfy[k] = n[k]\n",
     "    return pdfx, pdfy\n",
     "\n",
-    "np.random.se\n",
+    "np.random.seed(5)\n",
+    "mu, \n",
     "\n",
     "# Generate test data and test the function - uncomment to run the test\n",
     "# np.random.seed(5)\n",
