Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -159,7 +159,8 @@
     "    return pdfx, pdfy\n",
     "\n",
     "np.random.seed(5)\n",
-    "mu, \n",
+    "mu, sigma = 0, 0.1\n",
+    "\n",
     "\n",
     "# Generate test data and test the function - uncomment to run the test\n",
     "# np.random.seed(5)\n",
