--- a/index.ipynb
+++ b/index.ipynb
@@ -160,7 +160,8 @@
     "\n",
     "np.random.seed(5)\n",
     "mu, sigma = 0, 0.1\n",
-    "s= np.random.normal(m)\n",
+    "s= np.random.normal(mu, sigma, 100)\n",
+    "x,y = \n",
     "\n",
     "# Generate test data and test the function - uncomment to run the test\n",
     "# np.random.seed(5)\n",
