Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -161,7 +161,8 @@
     "np.random.seed(5)\n",
     "mu, sigma = 0, 0.1\n",
     "s= np.random.normal(mu, sigma, 100)\n",
-    "x,y = \n",
+    "x,y = density(s)\n",
+    "\n",
     "\n",
     "# Generate test data and test the function - uncomment to run the test\n",
     "# np.random.seed(5)\n",
