Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -162,7 +162,8 @@
     "mu, sigma = 0, 0.1\n",
     "s= np.random.normal(mu, sigma, 100)\n",
     "x,y = density(s)\n",
-    "plt.plot(x,y,)\n",
+    "plt.plot(x,y, label = 'test')\n",
+    "\n",
     "\n",
     "# Generate test data and test the function - uncomment to run the test\n",
     "# np.random.seed(5)\n",
