--- a/index.ipynb
+++ b/index.ipynb
@@ -212,7 +212,11 @@
     }
    ],
    "source": [
-    "# Your code here "
+    "# Your code here \n",
+    "male_df['Height'].plot.hist(bins=binsize, density=True, alpha=0.7, label='Male Height')\n",
+    "female_df['Height'].plot.hist(bins=binsize, density=True, alpha=0.7, label='Female Height')\n",
+    "plt.legend()\n",
+    "plt.show()"
    ]
   },
   {
