--- a/index.ipynb
+++ b/index.ipynb
@@ -215,8 +215,7 @@
     "# Your code here \n",
     "male_df['Height'].plot.hist(bins=binsize, density=True, alpha=0.7, label='Male Height')\n",
     "female_df['Height'].plot.hist(bins=binsize, density=True, alpha=0.7, label='Female Height')\n",
-    "plt.legend()\n",
-    "plt.show()"
+    "plt.legend()\n"
    ]
   },
   {
