--- a/index.ipynb
+++ b/index.ipynb
@@ -215,7 +215,8 @@
     "# Your code here \n",
     "male_df['Height'].plot.hist(bins=binsize, density=True, alpha=0.7, label='Male Height')\n",
     "female_df['Height'].plot.hist(bins=binsize, density=True, alpha=0.7, label='Female Height')\n",
-    "plt.legend()\n"
+    "plt.legend()\n",
+    "x,y = density(male_df.)"
    ]
   },
   {
