--- a/index.ipynb
+++ b/index.ipynb
@@ -216,7 +216,8 @@
     "male_df['Height'].plot.hist(bins=binsize, density=True, alpha=0.7, label='Male Height')\n",
     "female_df['Height'].plot.hist(bins=binsize, density=True, alpha=0.7, label='Female Height')\n",
     "plt.legend()\n",
-    "x,y = density(male_df.)"
+    "x,y = density(male_df['Height'])\n",
+    "plt.p"
    ]
   },
   {
