Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -217,7 +217,8 @@
     "female_df['Height'].plot.hist(bins=binsize, density=True, alpha=0.7, label='Female Height')\n",
     "plt.legend()\n",
     "x,y = density(male_df['Height'])\n",
-    "plt.plot(x,y)\n"
+    "plt.plot(x,y)\n",
+    "x,y = density(male_df['Height'])"
    ]
   },
   {
