Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -218,7 +218,7 @@
     "plt.legend()\n",
     "x,y = density(male_df['Height'])\n",
     "plt.plot(x,y)\n",
-    "x,y = density(male_df['Height'])"
+    "x,y = density(female_df['Height'])\n"
    ]
   },
   {
