--- a/index.ipynb
+++ b/index.ipynb
@@ -258,7 +258,14 @@
     }
    ],
    "source": [
-    "# Your code here "
+    "# Your code here \n",
+    "male_df['Weight'].plot.hist(bins=binsize, density=True, alpha=0.7, label='Male Height')\n",
+    "female_df['Height'].plot.hist(bins=binsize, density=True, alpha=0.7, label='Female Height')\n",
+    "plt.legend()\n",
+    "x,y = density(male_df['Height'])\n",
+    "plt.plot(x,y)\n",
+    "x,y = density(female_df['Height'])\n",
+    "plt.plot(x,y)"
    ]
   },
   {
