Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -243,16 +243,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f63af9242e8>]"
+       "[<matplotlib.lines.Line2D at 0x7f63af1f3a20>]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
