Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -323,7 +323,8 @@
     }
    ],
    "source": [
-    "# Code for heights here"
+    "# Code for heights here\n",
+    "import seaborn as sns\n"
    ]
   },
   {
