--- a/index.ipynb
+++ b/index.ipynb
@@ -324,7 +324,8 @@
    ],
    "source": [
     "# Code for heights here\n",
-    "import seaborn as sns\n"
+    "import seaborn as sns\n",
+    "sns.distp"
    ]
   },
   {
