--- a/index.ipynb
+++ b/index.ipynb
@@ -325,7 +325,7 @@
    "source": [
     "# Code for heights here\n",
     "import seaborn as sns\n",
-    "sns.distp"
+    "sns.distplot(male_df['Height'])"
    ]
   },
   {
