--- a/index.ipynb
+++ b/index.ipynb
@@ -325,7 +325,8 @@
    "source": [
     "# Code for heights here\n",
     "import seaborn as sns\n",
-    "sns.distplot(male_df['Height'])"
+    "sns.distplot(male_df['Height'])\n",
+    "sns.distplot(female_df['Height'])"
    ]
   },
   {
