Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -338,7 +338,8 @@
     "# Code for heights here\n",
     "import seaborn as sns\n",
     "sns.distplot(male_df['Height'])\n",
-    "sns.distplot(female_df['Height'])\n"
+    "sns.distplot(female_df['Height'])\n",
+    "plt.title('')"
    ]
   },
   {
