Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -350,12 +350,7 @@
     }
    ],
    "source": [
-    "# Code for weights here\n",
-    "import seaborn as sns\n",
-    "sns.distplot(male_df['Weight'])\n",
-    "sns.distplot(female_df['Weight'])\n",
-    "plt.title('Comparing Heights')\n",
-    "plt.show()"
+    "# Code for weights here"
    ]
   },
   {
